--- a/users/templates/premium-popup.html
+++ b/users/templates/premium-popup.html
@@ -30,7 +30,7 @@
             <i class="bi bi-check"></i>
         </div>
         <div class="activate-premium">
-            <button class="button-activate-premium" onclick="openpagepreium()">
+            <button class="button-activate-premium" onclick="openpagepremium()">
              Активировать
             </button>
         </div>
