--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="{% static "style/notifical.css" %}">
     <link rel="stylesheet" href="{% static "style/conf.css" %}">
     <link rel="stylesheet" href="{% static "style/interface.css" %}">
-    <link rel="stylesheet" href="{% static "style/blocked.css" %}">
     <link rel="stylesheet" href="{% static "style/info_user.css" %}">
     <link rel="stylesheet" href="{% static "style/genders.css" %}">
     <link rel="stylesheet" href="{% static "style/about.css" %}">
@@ -248,6 +247,7 @@
 
     
     <div id="popup-container"></div>
+    <div id="prem-detail"></div>
     <div id="popup-container__tariff"></div>
     <div id='payment-popup'></div>
     <div id='settings__popup'></div>
@@ -255,7 +255,6 @@
     <div id='user-notifical-poput'></div>
     <div id='conf-user-popup'></div>
     <div id='interface-user-popup'></div>
-    <div id='blocked-users-popup'></div>
     <div id='detail__info'></div>
     <div id='genders-popup'></div>
     <div id='about-user-popup'></div>
@@ -306,6 +305,12 @@
             .then(data => {
                 document.getElementById('popup-container').innerHTML = data;
             });
+
+        fetch('{% url "users:prem_detail" %}')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('prem-detail').innerHTML = data;
+            });
     
         fetch('{% url "users:payment" %}')
             .then(response => response.text())
@@ -342,15 +347,7 @@
             .then(data => {
                 document.getElementById('interface-user-popup').innerHTML = data;
             });
-        
-        fetch('{% url "users:blocked" %}')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('blocked-users-popup').innerHTML = data;
-            });
-        
-        
-        
+     
         fetch('{% url "users:genders" %}')
             .then(response => response.text())
             .then(data => {
@@ -449,8 +446,7 @@
                 document.getElementById('alco-popup').innerHTML = data;
                 updateAlcoholSelection();
                 $('#save-button-alcohol').click(function() {
-                    saveUserAlcohol('{% url "users:
-                    " %}'); // Убедитесь, что функция вызывается только при клике на кнопку
+                    saveUserAlcohol('{% url "users:update_alcohol_user" %}'); // Убедитесь, что функция вызывается только при клике на кнопку
                 });
             });
         
