--- a/users/templates/settings.html
+++ b/users/templates/settings.html
@@ -10,29 +10,18 @@
                 Аккаунт
                 <i class="bi bi-caret-right-fill open-detail-settings"></i>
             </span>
-            <span class="d-flex justify-content-between align-items-center" onclick='OpenUserAccountNotifical()'>
-                Уведомления
-                <i class="bi bi-caret-right-fill open-detail-settings"></i>
-            </span>
-            <span class="d-flex justify-content-between align-items-center" onclick='OpenUserConfidentiality()'>
-                Конфиденциальность
-                <i class="bi bi-caret-right-fill open-detail-settings"></i>
-            </span>
             <span class="d-flex justify-content-between align-items-center" onclick='OpenUserInterface()'>
                 Интерфейс
                 <i class="bi bi-caret-right-fill open-detail-settings"></i>
             </span>
-            <span class="d-flex justify-content-between align-items-center" onclick='OpenUserBlocked()'>
-                Заблокированные контакты
-                <i class="bi bi-caret-right-fill open-detail-settings"></i>
-            </span>
+            
             <span class="d-flex justify-content-between align-items-center" onclick='openModal()'>
                 Alamio Premium
                 <i class="bi bi-caret-right-fill open-detail-settings"></i>
             </span>
-            <span class="d-flex justify-content-between align-items-center">
+            {% comment %} <span class="d-flex justify-content-between align-items-center">
                 Обратная связь
                 <i class="bi bi-caret-right-fill open-detail-settings"></i>
-            </span>
+            </span> {% endcomment %}
         </div>
     </div>
