--- a/users/templates/user_account.html
+++ b/users/templates/user_account.html
@@ -15,11 +15,8 @@
                 </div>
             </div>
             <div class="other-settings-container mt-4">
-                <span class="d-flex justify-content-between align-items-center">
-                    Выйти
-                    <i class="bi bi-caret-right-fill open-icon"></i>
-                </span>
-                <span class="d-flex justify-content-between align-items-center mt-2">
+                
+                <span class="d-flex justify-content-between align-items-center mt-2" id='delete-acc'>
                     Удалить аккаунт
                     <i class="bi bi-caret-right-fill open-icon"></i>
                 </span>
