--- a/users/templates/height_user.html
+++ b/users/templates/height_user.html
@@ -11,7 +11,7 @@
             <input type="range" class="form-range slider-height" min="100" max="230" value="175" id="userHeightRange" oninput="updateSliderValue()">
         </div>
         <div class="button-save-container-height mt-4">
-            <button class="save-user-height btn btn-primary">Сохранить</button>
+            <button class="save-user-height btn btn-primary" id='save-button-height'>Сохранить</button>
         </div>
     </div>
 </div>
