--- a/users/templates/work.html
+++ b/users/templates/work.html
@@ -8,10 +8,10 @@
           Напиши, кем ты работаешь
         </label>
         <div class="load-user-work-container">
-            <textarea class="input-container-work"></textarea>
+            <textarea id='work' class="input-container-work">{{ user.work }}</textarea>
         </div>
         <div class="button-save-container">
-            <button class="save-user-work">Сохранить</button>
+            <button class="save-user-work" id='save-button-work'>Сохранить</button>
         </div>
     </div>
   </div>
